# QuizProjec

./: .CMakeLists.txt.un~  .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt~  QuizProjec.sln  copy-assets.sh
QuizProjec/: Game.cpp  Game.hpp  GameMap.cpp  GameMap.hpp  GameState.hpp  LobbyState.cpp  LobbyState.hpp  Map.hpp  MenuState.cpp  MenuState.hpp  PlayingState.cpp  PlayingState.hpp  Question.cpp  Question.hpp  QuestionPackage.cpp  QuestionPackage.hpp  QuestionPackageManager.cpp  QuestionPackageManager.hpp  QuizProjec.vcxproj  QuizProjec.vcxproj.filters  Utils.hpp  World.cpp  World.hpp
res/: README.txt
res/Assets/Questions/: testfiles.json  testfiles1.json  testfiles2.json
src/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~  Game.cpp  Game.hpp  GameMap.cpp  GameMap.hpp  GameState.cpp  GameState.hpp  LobbyState.cpp  LobbyState.hpp  MenuState.cpp  MenuState.hpp  PlayingState.cpp  PlayingState.hpp  Question.cpp  Question.hpp  QuestionPackage.cpp  QuestionPackage.hpp  QuestionPackageManager.cpp  QuestionPackageManager.hpp  QuizProjec.vcxproj  QuizProjec.vcxproj.filters  StringHelpers.hpp  Utils.hpp  json.hpp  main.cpp
